SigmaCodebackup3rdSep/objects/Service_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Feedbacks</relationshipLabel>
        <relationshipName>Service_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Feedbacks</relationshipLabel>
        <relationshipName>Service_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Channel__c</fullName>
        <label>Feedback Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Rating__c</fullName>
        <inlineHelpText>1 - 10</inlineHelpText>
        <label>Service Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Service_Resource__c</referenceTo>
        <relationshipLabel>Service Feedbacks</relationshipLabel>
        <relationshipName>Service_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Service Feedbacks</relationshipLabel>
        <relationshipName>Service_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Service Feedback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>